<resources>
    <string name="app_name">Baby Bonus Scheme</string>
    <string name="action_settings">Settings</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_save_as_draft">SAVE AS DRAFT</string>
    <string name="btn_add_child">ADD CHILD</string>
    <string name="btn_add_declaration">ADD DECLARATION</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_view">VIEW</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_browse">BROWSE</string>
    <string name="btn_apply_now">APPLY NOW</string>
    <string name="btn_edit_app">EDIT APPLICATION</string>
    <string name="btn_view_app">VIEW APPLICATION</string>
    <string name="btn_check">CHECK</string>
    <string name="label_home_family_view">Family View</string>
    <string name="label_home_update_profile">Update Profile</string>
    <string name="label_home_sibling_check">Sibling Check</string>
    <string name="label_home_enrolment">Enrolment</string>
    <string name="label_home_enrolment_status">Enrolment\nStatus</string>
    <string name="label_home_eligibility_check">Eligibility Check</string>
    <string name="label_home_services">Services</string>
    <string name="label_home_services_status">Services\nStatus</string>
    <string name="label_home_ai_locator">AI Locator</string>
    <string name="label_home_faq">FAQ</string>
    <string name="label_home_feedback">Feedback</string>
    <string name="label_home_about">About</string>
    <string name="label_person_nric">NRIC/FIN</string>
    <string name="label_person_name">Name</string>
    <string name="label_person_birthday">Date of Birth</string>
    <string name="label_person_type">Type</string>
    <string name="label_child">Child</string>
    <string name="label_child_name">Child Name</string>
    <string name="label_child_birth_cert_no">Birth Cert: No</string>
    <string name="label_child_birth_certificate_no">Birth Certificate No</string>
    <string name="label_child_current_birth_order">Current Birth Order</string>
    <string name="label_child_estimated_delivery_date">Estimated Date of Delivery</string>
    <string name="label_child_cash_gift_amount">Cash Gift</string>
    <string name="label_child_government_matching_amount">Govt Matching</string>
    <string name="label_child_child_care_subsidy_amount">Childcare Subsidy</string>
    <string name="label_child_total_amount_received">Total Amount Received</string>
    <string name="label_child_born_on_overseas">Is your child born overseas</string>
    <string name="label_child_date_of_adoption">Date of Adoption</string>
    <string name="label_adult">Adult</string>
    <string name="label_adult_id_no">ID No.</string>
    <string name="label_adult_identification_type">Identification Type</string>
    <string name="label_adult_identification_no">Passport No./ Foreign ID</string>
    <string name="label_adult_name_as_in">Name (as in NRIC/ Passport)</string>
    <string name="label_adult_nationality">Nationality</string>
    <string name="label_adult_communication_mode">Mode of Communication</string>
    <string name="label_adult_mobile_no">Mobile</string>
    <string name="label_adult_email_addr">Email</string>
    <string name="label_adult_addr_type">Address Type</string>
    <string name="label_adult_address">Address</string>
    <string name="label_adult_occupation">Occupation</string>
    <string name="label_adult_monthly_income">Monthly Income</string>
    <string name="label_adult_relationship">Relationship</string>
    <string name="label_na_holder_long">Nominated Account Holder for Cash Gift</string>
    <string name="label_cda_trustee_long">Child Development Account Trustee</string>
    <string name="label_cda_trustee_change_reason">Reason for Change of Trustee</string>
    <string name="label_cda_trustee_change_reason_other">Other Reason</string>
    <string name="label_user_details">User</string>
    <string name="label_adult_type_father">Father</string>
    <string name="label_adult_type_mother">Mother</string>
    <string name="label_adult_type_nah">Nominated Account Holder</string>
    <string name="label_adult_type_cdat">CDA Trustee</string>
    <string name="label_adult_type_third_party">Third Party</string>
    <string name="label_bank_name">Bank</string>
    <string name="label_bank_branch">Bank Branch</string>
    <string name="label_bank_tc_url">Bank T&amp;C</string>
    <string name="label_bank_account">Bank Account No.</string>
    <string name="label_cda_bank_change_reason">Reason for Change of Bank</string>
    <string name="label_cda_bank_change_reason_other">Other Reason</string>
    <string name="label_address_local">Local Address</string>
    <string name="label_address_postal_code">Postal Code</string>
    <string name="label_address_floor_no">Floor No.</string>
    <string name="label_address_unit_no">Unit No.</string>
    <string name="label_address_block_house">Block/House No.</string>
    <string name="label_address_street_name">Street Name</string>
    <string name="label_address_building_name">Building Name</string>
    <string name="label_address_foreign">Foreign Address</string>
    <string name="label_address_address1">Address 1</string>
    <string name="label_address_address2">Address 2</string>
    <string name="label_cash_gift">Cash Gift</string>
    <string name="label_cash_gift_amount">Amount</string>
    <string name="label_cash_gift_paid_date">Paid Date</string>
    <string name="label_cash_gift_scheduled_date">Scheduled Date</string>
    <string name="label_child_dev_acc">Child Development Account</string>
    <string name="label_child_dev_acc_detail">CDA Details</string>
    <string name="label_child_dev_acc_bank">CDA Bank</string>
    <string name="label_child_dev_acc_expiry">CDA Expiry Date</string>
    <string name="label_child_dev_acc_cap">CDA Cap</string>
    <string name="label_child_dev_acc_remaining_cap">Remaining Cap</string>
    <string name="label_child_dev_acc_total_deposit">Total CDA Deposit</string>
    <string name="label_child_dev_acc_total_gov_matching">Total Govt Matching</string>
    <string name="label_child_dev_acc_matching_history">CDA Matching History</string>
    <string name="label_child_dev_acc_from_date">From Date</string>
    <string name="label_child_dev_acc_to_date">To Date</string>
    <string name="label_child_dev_acc_nets_card_child_name">Child\'s Name to be printed on Baby Bonus NETS Card</string>
    <string name="label_cda_matching_history">CDA Matching History</string>
    <string name="label_cda_matching_history_deposit">CDA Deposit</string>
    <string name="label_cda_matching_history_deposit_date">CDA Deposit Date</string>
    <string name="label_cda_matching_history_matching">Govt. Matching</string>
    <string name="label_cda_matching_history_matching_date">Matched Date</string>
    <string name="label_child_care_subsidy">Child Care Subsidy</string>
    <string name="label_child_care_subsidy_name">Name of Centre</string>
    <string name="label_child_care_subsidy_amount">Amount</string>
    <string name="label_child_care_subsidy_month">Month</string>
    <string name="label_child_care_subsidy_total">Total Childcare Subsidies</string>
    <string name="label_enrolment_main_header">Instructions for joining the BBS</string>
    <string name="label_service_change_nah">Request to change Nominated Account Holder</string>
    <string name="label_service_change_nan">Request to change Nominated Account Number</string>
    <string name="label_service_change_cdat">Request to change CDA Trustee</string>
    <string name="label_service_change_cdab">Request to change CDA Bank</string>
    <string name="label_service_cda_psea">Request to transfer from CDA to PSEA</string>
    <string name="label_service_change_bo">Request to change Birth Order</string>
    <string name="label_service_cdab_tc">Acceptance of CDA Bank T&amp;C</string>
    <string name="label_service_open_cda">Opening of CDA</string>
    <string name="label_service_status_change_nah">Change of NAH</string>
    <string name="label_service_status_change_nan">Change of Account No</string>
    <string name="label_service_status_change_cdat">Change of CDA Trustee</string>
    <string name="label_service_status_change_cdab">Change of CDA Bank</string>
    <string name="label_service_status_cda_psea">Transfer from CDA to PSEA</string>
    <string name="label_service_status_change_bo">Change of Birth Order</string>
    <string name="label_service_status_cdab_tc">Acceptance of CDA Bank T&amp;C</string>
    <string name="label_service_status_open_cda">Opening of CDA</string>
    <string name="label_service_status_state">Status</string>
    <string name="label_service_status_id">ID</string>
    <string name="label_service_status_type">Type</string>
    <string name="label_service_status_date">Date</string>
    <string name="desc_services_change_bo_instruction_1">1. Birth order is tagged to the natural mother and not the father.</string>
    <string name="desc_services_change_bo_instruction_2">2. Children who are not Singapore Citizens, given away for adoption, stillbirths and stepchildren are not considered in the counting of birth.</string>
    <string name="desc_services_change_bo_instruction_3">3. Twins and triplets (and other multiple births) are counted as separate births.</string>
    <string name="desc_services_change_bo_example_1">
        Example 1\n\n
        Mr A and Mdm B have 3 children (child X, Y and Z) born in January 2007, January 2009 and January 2013.
        Child X was born in USA and not a Singapore citizen as at January 2013.
        Child Y and Z are Singapore citizens. Child Y and child Z will be considered as the first and second child respectively for the purpose of Baby Bonus Scheme.
        Subsequently in June 2013, child X obtained Singapore citizenship and parents inform MSF accordingly.
        Child Y and child Z will be re-determined as the second and third child.\n\n</string>
    <string name="desc_services_change_bo_example_2">
        Example 2\n\n
        Mdm C gave birth to 3 children (child E, F and G) in 2002, 2005 and 2013 and they are Singapore citizens.
        Child E and child F were from her first marriage to Mr L.
        Subsequently Mdm C remarried to Mr M and gave birth to child G. Child G will be considered as the third child for the purpose of Baby Bonus Scheme.\n\n</string>
    <string name="desc_services_change_bo_example_3">
        Example 3\n\n
        Mr J has 3 children (child O, P and Q) born in 2003, 2008 and 2013 and they are Singapore citizens.
        Child O and child P were from Mr J’s first marriage to Mdm H.
        Subsequently Mr J remarried to Mdm K and she gave birth to child Q.Child Q is Mdm K’s first child.
        Child Q will be considered as the first child for the purpose of Baby Bonus Scheme.\n\n</string>
    <string name="desc_services_change_bo_example_4">
        Example 4\n\n
        Mr and Mrs D have 2 children (child Q and R). Child Q was born in December 2005.
        In February 2006, Mr and Mrs D legally adopted child R who is a Singapore Citizen and born in August 2004.
        Child R will be considered as the second child for the purpose of Baby Bonus scheme, even though he/she may be older.\n\n</string>
    <string name="desc_about_title">This application is a service of the Singapore Government.\n\n</string>
    <string name="desc_about_content">Brief description of the mobile web,native mobile application and/or its features\n\nDate released:  27 May 2015\nVersion: 1.0\n\nEmail us to provide your suggestion on Baby Bonus Mobile app via @email</string>
    <string name="desc_about_usage">Terms of use</string>
    <string name="desc_about_privacy">Privacy Statement</string>
    <string name="desc_about_copyright">Copyright Statement</string>
</resources>