<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.gov.msf.bbss.view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/screen_title_bar"
            layout="@layout/action_bar_fragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <include
            android:id="@+id/screen_instructions"
            layout="@layout/screen_instructions_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <include
            android:id="@+id/section_declaration"
            layout="@layout/section_header_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <!-- Instruction 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_services_change_bo_instruction_1"
            android:paddingLeft="@dimen/dimen_50"
            android:paddingTop="@dimen/dimen_10"
            android:textSize="@dimen/app_grid_font_size"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_bg"/>

        <!-- Instruction 2 -->
        <LinearLayout
            android:id="@+id/ll_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@android:drawable/arrow_down_float"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_services_change_bo_instruction_2"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_10"
                android:textSize="@dimen/app_grid_font_size"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_20"/>
        </LinearLayout>

        <!-- Instruction 2 - SUB -->
        <LinearLayout
            android:id="@+id/ll_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/common_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:padding="5dp"
                android:text="@string/desc_services_change_bo_example_1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/common_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:padding="5dp"
                android:text="@string/desc_services_change_bo_example_2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/common_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:padding="5dp"
                android:text="@string/desc_services_change_bo_example_3"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/common_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:padding="5dp"
                android:text="@string/desc_services_change_bo_example_4"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_bg"/>

        <!-- Instruction 3 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_services_change_bo_instruction_3"
            android:paddingLeft="@dimen/dimen_50"
            android:paddingTop="@dimen/dimen_10"
            android:textSize="@dimen/app_grid_font_size"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_bg"/>


        <include
            android:id="@+id/screen_buttons"
            layout="@layout/clickable_2buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
